[package]
name = "hpke-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
hmac = "0.12.1"
ml-kem = "0.2.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
p384 = "0.13.1"
p521 = { version = "0.13.3", features = ["ecdh"] }
rand = "0.8.5"
rand_core = "0.6.4"
sha2 = "0.10.8"
sha3 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
x448 = "0.6.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hpke"
harness = false
